--- a/style.css
+++ b/style.css
@@ -6,12 +6,13 @@ body {
     color: #333;
     margin: 0;
     background-color: #e7e4e4d5;
+    justify-content: center;
 }
 
 li {
     text-align: start;
-    margin-left: 510px; 
-    margin-right: 510px;
+    margin-left: 350px; 
+    margin-right: 350px;
     position: relative;
     padding: 2px 5px 2px 5px;
     font-size: 20px;
@@ -21,6 +22,8 @@ li {
 #img-div {
 background-color: rgb(255, 251, 251);
 padding: 25px;
+height: 760px;
+    width: 1160px;
 }
 
 img {
@@ -29,12 +32,12 @@ img {
 }
 
 #img-caption {
-    font-size: 17px;
+    font-size: 15px;
 }
 
 blockquote {
-    padding-left: 510px;
-    margin-right: 510px;
+    padding-left: 450px;
+    margin-right: 450px;
     text-align: start;
     font-style: italic;
     font-size: 20px;
