--- a/style.css
+++ b/style.css
@@ -10,12 +10,7 @@ body {
 }
 
 li {
-    text-align: start;
-    margin-left: 350px; 
-    margin-right: 350px;
-    position: relative;
-    padding: 2px 5px 2px 5px;
-    font-size: 20px;
+    font-size: 16px;
    
 }
 
@@ -36,9 +31,15 @@ img {
 }
 
 blockquote {
-    padding-left: 450px;
-    margin-right: 450px;
-    text-align: start;
+    padding: 0 220px 0 220px;
+    text-align: center;
     font-style: italic;
     font-size: 20px;
+}
+#tribute-info {
+    padding: 0 220px 0 220px;
+    text-align: start;
+}
+#headline {
+    text-align: center;
 }
